--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bewizyu</groupId>
-	<artifactId>project-private-showcase-back</artifactId>
+	<artifactId>hoc-2018-mojito-project-private-showcase-back</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Private ShowCase Web API</name>
+	<name>HoC 2018 Mojito Private ShowCase Web API</name>
 
 	<!-- Inherit defaults from Spring Boot -->
 	<parent>
